--- a/aboly.html
+++ b/aboly.html
@@ -546,7 +546,7 @@ img.characterimg {
 </li>
 <li>
 <p><span class="lyterm">其为仁之本与</span>（<span class="lypinyin">yú</span>）。<a id="qi2a"></a><span class="lyterm">其</span>：用于谓语之前加强语气的副词（而不是代词），随后的谓语可以表示判断（多半，大概）、推测（将会，将要）、反问（难道，岂）、祈使（还是，应该）等。<span class="lyexample"><span>【例】</span><span><a href="#3.23" class="lyref">3.23</a> <span class="lyq">乐其可知也。</span><a href="#5.7" class="lyref">5.7</a> <span class="lyq">从我者其由与？</span><a href="#6.6" class="lyref">6.6</a> <span class="lyq">虽欲勿用，山川其舍诸？</span>《史记·田敬仲完世家》：<span class="lyq"><a href="#chenchengzi">田常</a>言于齐平公曰：“德施，人之所欲，君其行之；刑罚，人之所恶，臣请行之。”</span></span></span></p>
-<p><a id="yu2"></a><span class="lyterm">与</span>：句末语气词，可以表示感叹、疑问或反问，后来写成“欤”（<span class="lypinyin">yú</span>）。<span class="lyexample"><span>【例】</span><span><a href="#5.22" class="lyref">5.22</a> <span class="lyq">归与！归与！</span><a href="#8.6" class="lyref">8.6</a> <span class="lyq">君子人与？君子人也。</span><a href="#12.21" class="lyref">12.21</a> <span class="lyq">先事后得，非崇德与？</span></span></span></p>
+<p><a id="yu2"></a><span class="lyterm">与</span>：句末语气词，可以表示感叹、疑问或反问，后来写作“欤”（<span class="lypinyin">yú</span>）。<span class="lyexample"><span>【例】</span><span><a href="#5.22" class="lyref">5.22</a> <span class="lyq">归与！归与！</span><a href="#8.6" class="lyref">8.6</a> <span class="lyq">君子人与？君子人也。</span><a href="#12.21" class="lyref">12.21</a> <span class="lyq">先事后得，非崇德与？</span></span></span></p>
 <p><a id="ren2"></a><span class="lyterm">仁</span>：人与人相亲相爱。字形结构是二人为仁，它是儒家思想的核心，衡量“真正的人”的第一标准。《论语》中出现的仁，有的是评价人的标准，有的是修行的目标，有的是仁的体现，有的指仁人，需要根据上下文具体把握。<span class="lyexample"><span>【例】</span><span><a href="#5.5" class="lyref">5.5</a> <span class="lyq">或曰：“雍也仁而不佞。”</span><a href="#6.7" class="lyref">6.7</a> <span class="lyq">回也，其心三月不违仁。</span><a href="#14.16" class="lyref">14.16</a> <span class="lyq">如其仁，如其仁！</span><a href="#1.6" class="lyref">1.6</a> <span class="lyq">泛爱众而亲仁。</span></span></span></p>
 <div class="lyseealso">
 <p><span>【参】</span><span>孔子开创性地将“仁”提高到人之至<a href="#de2">德</a>、总德的地位，以人为本，注重人与人之间的良性关系。《论语》从多方面阐述了仁，影响最大的要数 <a href="#6.30" class="lyref">6.30</a> <a href="#12.1" class="lyref">12.1</a> <a href="#12.22" class="lyref">12.22</a> 。这里摘录后世对仁的若干论述作为参考。</span></p>
@@ -703,7 +703,7 @@ img.characterimg {
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">是邦</span>。<span class="lyterm">是</span>：泛指代词，一个，任一。<a id="bang1"></a><span class="lyterm">邦</span>：<a href="#zhuhou">诸侯</a>的封国。</p></li>
 <li><p><span class="lyterm">求</span>：索取，指自己询问访求。</p></li>
-<li><p><span class="lyterm">抑与（<span class="lypinyin">yǔ</span>）之与（<span class="lypinyin">yú</span>）</span>。<span class="lyterm">抑</span>：表示选择的连词，还是，或是。第一个<span class="lyterm">与</span>是动词，给予，指别人主动提供。第二个<span class="lyterm">与</span>是<a href="#yu2">句末语气词</a>，表示疑问。</p></li>
+<li><p><span class="lyterm">抑与（<span class="lypinyin">yǔ</span>）之与（<span class="lypinyin">yú</span>）</span>。<span class="lyterm">抑</span>：表示选择的连词，还是，或是。<a id="yu3b"></a>第一个<span class="lyterm">与</span>是动词，给予，指别人主动提供。第二个<span class="lyterm">与</span>是<a href="#yu2">句末语气词</a>，表示疑问。</p></li>
 <li><p><span class="lyterm">温、良、恭、俭、让</span>：温和、善良、恭敬、自律、谦逊。<span class="lyterm">俭</span>：约束，节制，这是其本义。<span class="lyexample"><span>【例】</span><span>《孟子·告子下》：<span class="lyq"><a href="#zhougong">周公</a>之封于鲁，为方百里也；地非不足，而俭于百里。</span>（“为方百里”应是孟子的表达需要，未必是<a href="#luzhifengdi">史实</a>。）</span></span></p></li>
 <li><p><span class="lyterm">其诸</span>：相当于副词<a href="#qi2a">其</a>。<span class="lyterm">诸</span>：无意义的助词，用于单字词后补足音节，使句子读起来更顺畅。</p></li>
 </ul></div>
@@ -1233,7 +1233,7 @@ img.characterimg {
 <p><span class="lyterm">后</span>：动词，follow，A后B就是先B后A。它既可以指顺序的先后（如：先礼后兵），也能包含重要性的高低、关系的递进（如：<a href="#5.20" class="lyref">5.20</a> <span class="lyq">三思而后行</span>，<a href="#qiong2">穷</a>而后工），才引出了子夏的下一问。</p>
 </li>
 <li><p><span class="lyterm">礼后乎？</span>：即礼后仁乎？（那也可以说，先有仁）后有礼吧？这个联想真让人拍案叫绝，孔老师的欣喜也就不奇怪了。<span class="lyseealso"><span>【参】</span><span><a href="#3.3" class="lyref">3.3</a> <a href="#1.15" class="lyref">1.15</a> </span></span></p></li>
-<li><p><span class="lyterm">起</span>：通“启”，启发。<a href="#7.8" class="lyref">7.8</a>  有<span class="lyq">不愤不启</span>。<span class="lyterm">予</span>（<span class="lypinyin">yú</span>）：我。《论语》中所有的“予”都指我，而用“与”表示动词给予（<span class="lypinyin">yǔ</span>）。<span class="lyexample"><span>【例】</span><span><a href="#6.4" class="lyref">6.4</a> <span class="lyq">与之釜。</span></span></span></p></li>
+<li><p><span class="lyterm">起</span>：通“启”，启发。<a href="#7.8" class="lyref">7.8</a>  有<span class="lyq">不愤不启</span>。<span class="lyterm">予</span>（<span class="lypinyin">yú</span>）：我。《论语》中所有的“予”都指我，而用“<a href="#yu3b">与</a>”表示动词给予（<span class="lypinyin">yǔ</span>）。<span class="lyexample"><span>【例】</span><span><a href="#6.4" class="lyref">6.4</a> <span class="lyq">与之釜。</span></span></span></p></li>
 </ul>
 <p><span class="lyseealso"><span>【参】</span><span>南朝宋裴松之在《上三国志注表》中说，素、质固然是根本，绚、文也有锦上添花的功用：<span class="lyq"><a href="#qie4a">窃</a>惟绘事以众色成文，蜜蜂以兼采为味，故能使绚素有<a href="#zhang1">章</a>，甘<a href="#yu2d">逾</a><a href="#ben3">本</a><a href="#zhi4f">质</a>。</span>又见 <a href="#12.8" class="lyref">12.8</a> <a href="#zigong">子贡</a>的话。</span></span></p>
 </div>
@@ -1422,7 +1422,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#3.23">3.23</a></div>
 <div class="lybloboriginaltext"><p>子语鲁大师乐，曰：“乐其可知也。始作，翕如也；从之，纯如也，皦如也，绎如也，以成。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">子语（<span class="lypinyin">yù</span>）鲁<a href="#tai4">大</a>（<span class="lypinyin">tài</span>）师乐</span>：孔子告诉鲁国的乐官长（自己所理解的）音乐。<a id="yu4a"></a><span class="lyterm">语</span>：动词，告诉。<span class="lyexample"><span>【例】</span><span>《左传·隐公元年》：<span class="lyq">公语之故，且告之悔。</span></span></span><span class="lyterm">大师</span>：即太师，指乐官之长。</p></li>
+<li><p><span class="lyterm">子语（<span class="lypinyin">yù</span>）鲁<a href="#tai4">大</a>（<span class="lypinyin">tài</span>）师乐</span>：孔子告诉鲁国的乐官长（自己所理解的）音乐。<a id="yu4a"></a><span class="lyterm">语</span>：动词，告诉，宾语是人。而 <a href="#7.21" class="lyref">7.21</a> <span class="lyq">子不语</span>、<a href="#10.10" class="lyref">10.10</a> <span class="lyq">食不语</span>，则读<span class="lypinyin">yǔ</span>，表示谈论，谈话，宾语是说的内容或者不带宾语。<span class="lyexample"><span>【例】</span><span>《左传·隐公元年》：<span class="lyq">公语之故，且告之悔。</span></span></span><span class="lyterm">大师</span>：即太师，指乐官之长。</p></li>
 <li><p><span class="lyterm">翕（<span class="lypinyin">xī</span>）如</span>：初起（而渐强）的感觉。<span class="lyterm">翕</span>：字形为鸟合羽（待飞），本义为收缩，合拢，这里有外伏内张，跃然欲起的意思。其蓄敛而发的意蕴，可以和<a href="#fen4">愤</a>的憋闷而发相比较。这里的解释与各家不同，他们有的解释为收敛，有的解释为盛大，感觉都不够到位。<span class="lyseealso"><span>【参】</span><span>熊十力《新唯识论》：<span class="lyq">每一动，恒是有一种摄聚的，……这个摄聚的势用，是积极的收凝。……这由摄聚而成形向的动势，就名之为翕。</span></span></span>它在“翕然响应”等用法里，是形容共同一致的样子。</p></li>
 <li><p><span class="lyterm">从</span>：古注均读作<span class="lypinyin">zòng</span>，通“纵”，解释为乐声勃发，<span class="lyq">放纵尽其音声</span>（《论语注疏》）。如果读作<span class="lypinyin">cóng</span>，理解为然后，与“始作”相呼应，似乎也没什么不妥。</p></li>
 <li><p><span class="lyterm"><a href="#chun2">纯</a>如</span>：和谐融洽的感觉。</p></li>
@@ -2043,10 +2043,13 @@ img.characterimg {
 <p><a id="su4a"></a><span class="lyterm">粟</span>（<span class="lypinyin">sù</span>）：谷粒（舂去皮后就成为小米），泛指粮食。当时虽已出现了金属货币，谷物和布帛仍可作为一般等价物使用，既能交换其它物品，也可以直接消费。</p>
 <p><span class="lyterm">请粟</span>就是申请生活费（救助）。孔子生活比较宽裕的阶段，一为前501年起3年多的<a href="#qirenkuinvyue">仕鲁</a>时期，一为前484年<a href="#jikangzi">返鲁</a>直到去世的5年间。公西华是孔子晚年招收的学生，本章发生在返鲁之后。</p>
 </li>
-<li><p><a id="fu"></a><span class="lyterm">釜</span>（<span class="lypinyin">fǔ</span>）：古代容量单位，合当时的64 <a href="#dou3">升</a>，约等于现代的13公升。1釜粟相当于1个人月的口粮。</p></li>
-<li><p><span class="lyterm">庾</span>（<span class="lypinyin">yǔ</span>）：古代容量单位，合2.5釜。</p></li>
-<li><p><span class="lyterm">秉</span>（<span class="lypinyin">bǐng</span>）：古代容量单位，合25釜。<span class="lyterm">五秉</span>约合1个人10年的口粮（当然还应考虑其它方面的消费需要）。作为比较，《史记·孔子世家》载，孔子任鲁司寇时的年俸是粟6万斗，换算为375秉。</p></li>
+<li>
+<p><a id="fu"></a><span class="lyterm">釜</span>（<span class="lypinyin">fǔ</span>）：古代容量单位，合当时的64 <a href="#dou3">升</a>，约等于现代的13公升。1釜粟相当于1个人月的口粮。</p>
+<p><span class="lyterm">庾</span>（<span class="lypinyin">yǔ</span>）：古代容量单位，合2.5釜。</p>
+<p><span class="lyterm">秉</span>（<span class="lypinyin">bǐng</span>）：古代容量单位，合25釜。<span class="lyterm">五秉</span>约合1个人10年的口粮（当然还应考虑其它方面的消费需要）。作为比较，《史记·孔子世家》载，孔子任鲁司寇时的年俸是粟6万斗，换算为375秉。</p>
+</li>
 <li><p><a id="shi4b"></a><span class="lyterm">适</span>：前往，到。<span class="lyexample"><span>【例】</span><span><a href="#9.30" class="lyref">9.30</a> <span class="lyq">可与共学，未可与适道。</span>《诗经·魏风·硕鼠》：<span class="lyq">逝将去女，适彼乐土。</span></span></span></p></li>
+<li><p><span class="lyterm">衣（<span class="lypinyin">yì</span>）轻裘</span>：穿着轻暖的皮衣。<span class="lyterm">衣</span>：动词，穿着。<a href="#5.26" class="lyref">5.26</a>  的“衣轻裘”则是名词，古注有认为应作“衣裘”。</p></li>
 <li><p><span class="lyterm">周</span>：救济，补贴不足。<span class="lyterm">继</span>：增加，接续。<span class="lyseealso"><span>【参】</span><span>《汉书·疏广传》载，疏广作为汉宣帝的太子太傅告老退休时，宣帝<span class="lyq">加赐黄金二十斤，皇太子赠以五十斤</span>。疏广回乡后，每日宴请<span class="lyq">族人故旧宾客</span>，散财唯恐不快。有劝其多为子孙置买田宅产业，<span class="lyq">广曰：“吾岂老悖不念子孙哉？顾自有旧田庐，令子孙勤力其中，足以共衣食，与凡人齐。今复增益之以为赢余，但教子孙怠惰耳。贤而多财则损其志，愚而多财则益其过。且夫富者，众人之怨也；吾既亡以教化子孙，不欲益其过而生怨。”</span>在现代，公益基金会是善用余财回报社会的典型方式，可以参考资中筠著《财富的归宿：美国现代公益基金会述评》。</span></span></p></li>
 </ul></div>
 </div>
@@ -2120,7 +2123,7 @@ img.characterimg {
 <p><a href="#ranqiu">冉求</a>曰：“非不说子之道，力不足也。”</p>
 <p>子曰：“力不足者，中道而废，今女画。”</p>
 </div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">画</span>：本义为划分田界（这个意思后来写成“划”），引申为停止努力，不再向前进步。可以比较成语“故步自封”的“封”。<span class="lyseealso"><span>【参】</span><span><a href="#4.6" class="lyref">4.6</a> </span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm">画</span>：本义为划分田界（这个意思后来写作“划”），引申为停止努力，不再向前进步。可以比较成语“故步自封”的“封”。<span class="lyseealso"><span>【参】</span><span><a href="#4.6" class="lyref">4.6</a> </span></span></p></li></ul></div>
 </div>
 <a id="6.13"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#6.13">6.13</a></div>
@@ -2583,7 +2586,7 @@ img.characterimg {
 <li><p><a id="huxiang"></a><span class="lyterm">互乡难与言</span>：互乡这个地方的人很难沟通交流，也就是不容易好好说话。<span class="lyterm">互乡</span>在哪里已难以确考。</p></li>
 <li><p><span class="lyterm"><a href="#tongzi">童子</a>见</span>：指孔子接见了互乡的一个孩子。</p></li>
 <li><p><span class="lyterm"><a href="#yu3a">与</a>其进</span>：意思是，赞赏他追求进步。</p></li>
-<li><p><span class="lyterm">唯何甚？</span>：有什么过分的呢？<span class="lyterm">唯</span>：无意义的句首助词，也写成惟、维。<span class="lyexample"><span>【例】</span><span><a href="#11.26" class="lyref">11.26</a> <span class="lyq">唯求则非邦也与？</span>《诗经·召南·鹊巢》：<span class="lyq">维鹊有巢，维鸠居之。</span></span></span></p></li>
+<li><p><span class="lyterm">唯何甚？</span>：有什么过分的呢？<span class="lyterm">唯</span>：无意义的句首助词，也写作惟、维。<span class="lyexample"><span>【例】</span><span><a href="#11.26" class="lyref">11.26</a> <span class="lyq">唯求则非邦也与？</span>《诗经·召南·鹊巢》：<span class="lyq">维鹊有巢，维鸠居之。</span></span></span></p></li>
 <li><p><span class="lyterm">不保其往</span>：意思是，不担保他以后将会怎样。</p></li>
 </ul></div>
 </div>
@@ -3023,7 +3026,7 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#9.10">9.10</a></div>
 <div class="lybloboriginaltext"><p>子见齐衰者、冕衣裳者与瞽者，见之，虽少必作，过之必趋。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">齐衰（<span class="lypinyin">zī cuī</span>）者</span>：服丧的人。<span class="lyterm">齐衰</span>：古代五种丧服之一，用熟麻布制成，下摆缝边整齐。<span class="lyterm">衰</span>：丧服的下摆。<a id="wufu"></a><span class="lykeyword">五服</span>从重到轻为斩衰、齐衰、大功、小功、缌（<span class="lypinyin">sī</span>）麻。丧礼越重，丧服就越粗糙，丧期相应也较长，在《仪礼·丧服》、《礼记·丧服小记》中有详细记载。</p></li>
+<li><p><span class="lyterm">齐衰（<span class="lypinyin">zī cuī</span>）者</span>：服丧的人。<span class="lyterm">齐衰</span>：古代五种丧服之一，用熟麻布制成，下摆横缝整齐。<span class="lyterm">衰</span>：丧服的下摆。<a id="wufu"></a><span class="lykeyword">五服</span>从重到轻为斩衰、齐衰、大功、小功、缌（<span class="lypinyin">sī</span>）麻。丧礼越重，丧服就越粗糙，丧期相应也较长，在《仪礼·丧服》、《礼记·丧服小记》中有详细记载。</p></li>
 <li><p><span class="lyterm"><a href="#mian3">冕</a>衣裳者</span>：衣帽整齐的官人。</p></li>
 <li><p><a id="gu3a"></a><span class="lyterm"><a href="#gu3b">瞽</a>（<span class="lypinyin">gǔ</span>）者</span>：泛指盲人。</p></li>
 <li><p><a id="suishaobizuo"></a><span class="lyterm">虽少必作</span>：即使（他们）年纪轻，（孔子）也一定站起身来。</p></li>
@@ -6168,7 +6171,7 @@ img.characterimg {
 <p><a id="gongboliao"></a><span class="lycharname">公伯寮</span>（<span class="lypinyin">liáo</span>）：字子周，鲁国人。也有根据 <a href="#14.36" class="lyref">14.36</a>  认为他并非孔子弟子。 <a href="#14.36" class="lyref">14.36</a> </p>
 <p><a id="gongxihua"></a><span class="lycharname">公西华</span>，<span class="lycharname">子华</span>，<span class="lycharname">赤</span>：公西赤，字子华，鲁国人，少孔子42岁。他娴于交际，精通礼仪，据《礼记·檀弓上》，孔子的丧礼就是由他设计装饰的。《淮南子·齐俗训》比较了他和<a href="#zengshen">曾参</a>奉养父母的特点：<span class="lyq">公西华之养亲也，若与朋友处；曾参之养亲也，若事严主烈君——其于养一也。</span><a href="#5.8" class="lyref">5.8</a> <a href="#6.4" class="lyref">6.4</a> <a href="#7.34" class="lyref">7.34</a> <a href="#11.22" class="lyref">11.22</a> <a href="#11.26" class="lyref">11.26</a> </p>
 <p><a id="gongyechang"></a><span class="lycharname">公冶长</span>（<span class="lypinyin">cháng</span>）：字子长，鲁国人。传说他懂鸟语，<span class="lyq">曾读百鸟之书，能闻众鸟之音</span>（《公冶长听鸟语纲常》），因此蒙冤入狱，见皇侃《论语义疏》引文：<span class="lyq">主问冶长何以杀人，冶长曰：“解鸟语，不杀人。”主曰：“当视之。若必解鸟语，便相放也，若不解，当令偿死。”驻冶长在狱六十日……</span>这虽然离奇，但历来广为人知，成为典故使用，如白居易《池鹤八绝句》诗序：<span class="lyq">诸禽似有所诮，鹤亦时复一鸣。予非冶长，不通其意。</span>公冶长墓在今山东省诸城市贾悦镇。 <a href="#5.1" class="lyref">5.1</a> </p>
-<p><a id="lao"></a><span class="lycharname">牢</span>：《论语》中身份最隐秘的弟子，据《孔子家语》王肃序：孔子<span class="lyq">弟子有琴张，一名牢，字子开，亦字张，卫人也</span>，后世多认为是王肃的伪撰。 <a href="#9.7" class="lyref">9.7</a> </p>
+<p><a id="lao"></a><span class="lycharname">牢</span>：《论语》中身份最模糊的弟子，据《孔子家语》王肃序：孔子<span class="lyq">弟子有琴张，一名牢，字子开，亦字张，卫人也</span>，后世多认为是王肃的伪撰。 <a href="#9.7" class="lyref">9.7</a> </p>
 <p><a id="minziqian"></a><span class="lycharname">闵子骞</span>（<span class="lypinyin">qiān</span>），<span class="lycharname">闵子</span>：闵损，字子骞，鲁国人，少孔子15岁，<a href="#11.3">孔门十哲</a>之一。他是元代编录的童蒙读物《二十四孝》第4个故事“<a href="#danyishunmu">单衣顺母</a>”（又称“鞭打芦花”）的主角。今山东省济南市孝文化博物馆内及河南省濮阳市范县，均有闵子骞墓。 <a href="#6.9" class="lyref">6.9</a> <a href="#11.3" class="lyref">11.3</a> <a href="#11.5" class="lyref">11.5</a> <a href="#11.13" class="lyref">11.13</a> <a href="#11.14" class="lyref">11.14</a> </p>
 <p><a id="nangongkuo"></a><span class="lycharname">南宫适</span>（<span class="lypinyin">kuò</span>），<span class="lycharname">南容</span>：字子容，鲁国人，孔子的<a href="#5.2">侄女婿</a>。《孔子家语·弟子行》中，<a href="#zigong">子贡</a>形容他<span class="lyq">独居思仁，公言言义。</span><a href="#5.2" class="lyref">5.2</a> <a href="#11.6" class="lyref">11.6</a> <a href="#14.5" class="lyref">14.5</a> </p>
 <p><a id="qidiaokai"></a><span class="lycharname">漆雕开</span>：字子若，蔡国人，少孔子11岁，是孔子之后的<a href="#zizhang">八儒</a>之一。《孔子家语·七十二弟子解》说他<span class="lyq">习《<a href="#shangshu">尚书</a>》，不乐仕。</span>《韩非子·显学》说他方正刚直，<span class="lyq">不色挠，不目逃，行曲则违于臧获，行直则怒于诸侯，世主以为<a href="#lian2">廉</a>而礼之。</span>（挠：屈。目逃：避视。违：避。臧获：奴婢的贱称，骂奴为臧，骂婢为获。）漆雕开墓在今河南省驻马店市上蔡县。 <a href="#5.6" class="lyref">5.6</a> </p>
@@ -6391,9 +6394,9 @@ img.characterimg {
 <p>列出的每本书后面，有的带有点评，很多还没来得及加上。主要是背景介绍和很浅陋的一点感受，不敢对前辈的心血不敬，请读者明察。</p>
 <p><a id="baiwenban"></a>岳麓书社“古典名著普及文库”收录的都是“白文版”，也就是无注释无翻译不删节的古文原本。因为没有视觉上的不连续性，就易于把注意力集中到原文上，形成完整独立的认识。后面不逐一评介。</p>
 <a id="references-dictionaries"></a><h2>工具书</h2>
-<p><span class="lybook">《辞源》</span>（修订本），商务印书馆编辑部等编，商务印书馆，1988年。学习古汉语的权威参考，注解扎实，例句多引自最初的书证，有一锤定音的效果。但从检索到印刷，随处可以察觉它的高龄，释义、引文偶有不确。对比朗文、韦氏等英文词典的勤修苦练子孙满堂，可改进的地方实在太多，愿关心<a href="#lunyujishi">国家生命</a>者察焉。2015年底出了“有限修订”的第3版。</p>
+<p><span class="lybook">《辞源》</span>（第三版），商务印书馆编辑部编，商务印书馆，2015年。学习古汉语的权威参考，注解扎实，例句多引自最初的书证，有一锤定音的效果。第三版同时推出了U盘版和<a href="http://ciyuan.cp.com.cn" class="lyurl" target="_blank">网络版</a>，但对比朗文、韦氏等英文词典的勤修苦练子孙满堂，可改进的地方实在太多，愿关心<a href="#lunyujishi">国家生命</a>者察焉。</p>
 <p><span class="lybook">《古代汉语词典》</span>（第2版），张双棣主编，商务印书馆，2014年。主要用它和《辞源》相互印证。常比较不同的词典把哪个义项放在最前面作为本义（第一推动），可以揣摩编撰者进退取舍的思路。</p>
-<p><span class="lybook">《古汉语常用字字典》</span>（第4版），王力主编，商务印书馆，2005年。这是我最熟悉亲切的古汉语字典，详略合宜，释义清晰，例证精当，上中学时得益甚多。本书常举成语为例、不怕多注拼音，可能就是受它的影响。</p>
+<p><span class="lybook">《古汉语常用字字典》</span>（第5版），王力主编，商务印书馆，2016年。这是我最熟悉亲切的古汉语字典，详略合宜，释义清晰，例证精当，上中学时得益甚多。本书常举成语为例、不怕多注拼音，可能就是受它的影响。</p>
 <p><span class="lybook">《古代汉语虚词词典》</span>，中国社会科学院语言研究所古代汉语研究室编，商务印书馆，1999年。包括单字和常用搭配，共1855条，讲解细密，不落俗套，引证丰富，令人心情爽快。</p>
 <p><span class="lybook">《汉字源流字典》</span>，谷衍奎编，语文出版社，2008年。上推至甲骨文、篆文，分析了11000多个汉字的构造、本义与演变，图文并茂，多有创见，特别有益于理清字义的发展脉络。</p>
 <p><span class="lybook">《中国历史地图集》（第1册：原始社会·商·西周·春秋·战国时期）</span>，谭其骧主编，中国地图出版社，1982年。这是一套划时代的地图集，编制历时近30年，从谭先生留下的日记中，不难感受当时的工作热忱。30多年又过去了，最畅销的还是这个版本，当年为了“尽快公开出版”而留下的“很不少”的“错误和不妥之处”，仍待后人。</p>
