--- a/ly.html
+++ b/ly.html
@@ -612,7 +612,7 @@ a:link {
 <a id="3.19"></a><div class="lyblob">
 <div class="lyblobtag"><a href="aboly#3.19">3.19</a></div>
 <div class="lytext">
-<p>定公问：“君使臣，臣事君，如之何？”</p>
+<p>定公问：“君使臣、臣事君，如之何？”</p>
 <p>孔子对曰：“君使臣以礼，臣事君以忠。”</p>
 </div>
 </div>
