--- a/aboly.html
+++ b/aboly.html
@@ -594,7 +594,7 @@ img.characterimg {
 <li>
 <p><span class="lyterm">道（<span class="lypinyin">dǎo</span>）千乘（<span class="lypinyin">shèng</span>）之国</span>。<a id="dao3"></a><span class="lyterm">道</span>：通“导”，领导，治理，guide, lead。<span class="lyexample"><span>【例】</span><span><a href="#2.3" class="lyref">2.3</a> <span class="lyq">道之以政。</span></span></span></p>
 <p><a id="sheng4a"></a><span class="lyterm">乘</span>：<a href="#zhouchao">春秋</a>时配步兵的木制战车，又称革车，每辆通常由4匹马牵引（称为<a href="#si4">驷</a>），车上乘甲士3名，驾车者居中，车下配步兵72名。乘也可以指不配兵士，仅作交通工具的4马1车。</p>
-<p><a href="#zhouchao">战国</a>中期，机动灵活的骑射开始成为战车与步兵的强大补充。秦统一天下后，冲击力强但笨重难用的战车逐渐被淘汰。明清起各种火器的应用，又使骑兵走向没落。</p>
+<p><a href="#zhouchao">战国</a>中期，机动灵活的骑射开始成为战车与步兵的强大补充。秦统一天下后，冲击力强但笨重难用的战车逐渐被淘汰。明清开始各种火器的应用，又使骑兵走向没落。</p>
 <p><a id="bingyi"></a>按<a href="#zhouchao">周</a>制，每576家（64 <a href="#jingtianzhi">井</a>）百姓负责配齐一乘兵车及其步兵与装备。<span class="lyterm">千乘之国</span>就是用兵力来衡量国力的强弱。<a id="qianli"></a><a href="#tianzi">天子</a><a href="#wangji">畿</a>内<a href="#fang1a">地方</a>千里（即纵隔各千里，<a id="li3b"></a>每300 <a href="#bu4">步</a>为1 <span class="lykeyword">里</span>，约合414米），出兵车万乘，<a href="#zhuhou">诸侯</a>地方50里至数百里，出兵车千乘，<a id="fuyong"></a>不足50里者则为附庸，因此天子也称“万乘之尊”。</p>
 <p>然而东周时王室衰微，诸侯间征伐兼并，制度常为<a href="#juwen">具文</a>。前314年齐伐燕大胜，齐宣王称之为<span class="lyq">以万乘之国伐万乘之国</span>（《孟子·梁惠王下》），东汉赵岐注曰：<span class="lyq">侵地广大，<a href="#jian4a">僭</a>号称王，故曰万乘</span>。《战国策》刘向书录也说，战国末期<span class="lyq">万乘之国七、千乘之国五</span>。在七雄纷争的舞台上，<a href="#xizhouguo">西周国</a>、东周国就仅余千乘自保了。</p>
 <div class="lyseealso">
@@ -817,7 +817,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“为政以德，譬如北辰，居其所而众星共之。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
-<p><a id="de2a"></a><span class="lyterm"><a href="#de2">德</a></span>：特指与上位者的身份地位相匹配的崇高道德品质。它的异体字是惪（<span class="lypinyin">dé</span>，也是其右半边），《说文解字》解释为：<span class="lyq">外得于人，内得于己也。从直，从心。</span>甲骨文中未发现“德”字而有“徝”（<span class="lypinyin">zhì</span>）字，表示视正行直。金文加心成“德”，有时还省去“彳”旁，突出了心地正直的含义。据此推测，道德观念兴起于<a href="#zhouchao">周朝</a>，可能是武力灭<a href="#shangchao">商</a>后，需要用<a href="#geming">天赋王权</a>之说来解释维护自身的正义，即<a href="#13.3">正名</a>。执政过程中，“有德”又成为无可回避的标准。</p>
+<p><a id="de2a"></a><span class="lyterm"><a href="#de2">德</a></span>：特指与上位者的身份地位相匹配的崇高道德品质。它的异体字是惪（<span class="lypinyin">dé</span>，也是其右半边），《说文解字》解释为：<span class="lyq">外得于人，内得于己也。从直，从心。</span>甲骨文中未发现“德”字而有“徝”（<span class="lypinyin">zhì</span>）字，表示视正行直。金文加心成“德”，有时还省去“彳”旁，突出了心地正直的含义。据此推测，道德观念兴起于<a href="#zhouchao">周朝</a>，可能是武力灭<a href="#shangchao">商</a>时，需要用<a href="#geming">天赋王权</a>之说来解释维护自身的正义，即<a href="#13.3">正名</a>。执政过程中，“有德”又成为无可回避的标准。</p>
 <a id="dezhi"></a><div class="lyseealso">
 <p><span>【参】</span><span>儒家推崇的<span class="lykeyword">德治</span>，是将家族观念推广了的贤人政治，在上修身勤政，对下仁爱教化，很依赖上位者的道德才干，于是有了“父母官”、“爱民如子”的说法。《大学》：<span class="lyq">《诗》云：“乐<a href="#zhi1a">只</a>君子，民之父母。”民之所好好之，民之所恶恶之，此之谓民之父母。</span>（所引诗句出自《诗经·小雅·南山有台》。）《论语》中多次强调，执政者必须以身作则，如 <a href="#13.6" class="lyref">13.6</a>  等。《孝经·圣治》也说，<a href="#daren">君子</a><span class="lyq">言思可道，行思可乐，德义可尊，做事可<a href="#fa3">法</a>，容止可观，进退可度，以<a href="#lin2">临</a>其民。是以其民畏而爱之，<a href="#ze2">则</a>而象之，故能成其德教，而行其政令。</span>只有施行德政，才能得到上天眷顾，具体政策则可以灵活掌握。《尚书·周书·蔡仲之命》（伪）：<span class="lyq"><a href="#shangdi">皇天</a>无亲，惟德<a href="#shi4">是</a>辅；民心无常，惟<a href="#hui4">惠</a>之怀。为善不同，同归于治；为恶不同，同归于乱。</span></span></p>
 <p><a id="fazhi"></a>法家主张的<span class="lykeyword">法治</span>，以密法严刑为基础，不强求执政者德才无瑕，却足以建立坚实的底线。《管子·任法》：<span class="lyq">所谓仁义<a href="#liyue">礼乐</a>者，皆出于法，此先圣之所以一民也。……君臣上下贵贱皆发<a href="#yan1a">焉</a>，故曰“法”。……君臣上下贵贱皆从法，此谓为大治。</span>（<a id="yimin"></a>一民：统治百姓。发：产生。）《商君书·开塞》：<span class="lyq">古之民朴<a href="#yi3a">以</a>厚，今之民巧以伪。故效于古者，先德而治；效于今者，前刑而法。</span>《韩非子·难势》：<span class="lyq">且夫<a href="#yao">尧</a>、<a href="#shun">舜</a>、<a href="#xiachao">桀</a>、<a href="#zhou">纣</a>，千世而一出，……吾所以为言势者，中也。……抱法处势则治，背法去势则乱。今废势背法而待尧舜，尧舜至乃治，是千世乱而一治也；抱法处势而待桀纣，桀纣至乃乱，是千世治而一乱也。</span></p>
@@ -1311,7 +1311,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“周监于二代，郁郁乎文哉！吾从周。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
-<p><span class="lyterm">周监（<span class="lypinyin">jiàn</span>）于二代</span>。<a id="jian4d"></a><span class="lyterm">监</span>：通“鉴”，即镜子，这里指借鉴，批判性学习。其甲骨文字形为俯身面向水盆照视。<span class="lyexample"><span>【例】</span><span>《尚书·周书·酒诰》：<span class="lyq">人无于水监，当于民监。</span></span></span></p>
+<p><span class="lyterm">周监（<span class="lypinyin">jiàn</span>）于二代</span>。<a id="jian4d"></a><span class="lyterm">监</span>：通“鉴”，即镜子，这里是动词，借鉴，批判性学习。其甲骨文字形为俯身面向水盆照视。<span class="lyexample"><span>【例】</span><span>《尚书·周书·酒诰》：<span class="lyq">人无于水监，当于民监。</span></span></span></p>
 <p><span class="lyterm">二代</span>：指<a href="#xiachao">夏朝</a>与<a href="#shangchao">商朝</a>。<span class="lyseealso"><span>【参】</span><span><a href="#sandai">三代</a>治国之道，皆以敬慎戒惧为主，敬畏天命，重视史鉴，例如 <a href="#20.1" class="lyref">20.1</a>  的祭天之词。<a id="yinjian"></a>《诗经·大雅·荡》借<a href="#wen">周文王</a>之口，批评<a href="#zhou">殷纣王</a>不知借鉴夏桀的覆亡：<span class="lyq">殷鉴不远，在<a href="#xiachao">夏后</a>之世。</span>《尚书·周书·召诰》记录了<a href="#shaogong">召公</a>在营建<a href="#luoyi">洛邑</a>时的诰文：<span class="lyq">我不可不监于<a href="#you3">有</a>夏，亦不可不监于有殷。……</span>后面用连续的<span class="lyq">我不敢知曰</span>，反思了夏、商二朝受命于天，又因不敬修其德而<span class="lyq">早坠<a href="#jue2">厥</a>命</span>的教训，动情地希望周朝能够<span class="lyq">上下勤恤</span>（<a id="xu4"></a>恤（<span class="lypinyin">xù</span>）：忧患），敬德永命。</span></span></p>
 </li>
 <li><p><span class="lyterm">郁郁乎文哉</span>：“文郁郁乎哉”的倒装。<span class="lyterm">郁郁</span>：文采盛美的样子，这是形容周朝礼乐典章的美善。<a id="wen2b"></a><span class="lyterm">文</span>：文化政教制度，相当于 <a href="#5.13" class="lyref">5.13</a> 、<a href="#8.19" class="lyref">8.19</a>  里的<a href="#wenzhang">文章</a>。<span class="lyseealso"><span>【参】</span><span>《礼记·表记》在<a href="#mingshenli">比较</a>了三代的政教风俗之后评价：<span class="lyq">虞夏之质，殷周之文，至矣！虞夏之文，不胜其质；殷周之质，不胜其文。</span><a href="#6.18" class="lyref">6.18</a>  谈了质与文对于个人的意义。</span></span></p></li>
@@ -1560,7 +1560,7 @@ img.characterimg {
 <li><p> 读书人，知识分子。官职并非士的必要条件，但按儒家传统观念，是应当积极从政的。<a href="#19.13" class="lyref">19.13</a> <span class="lyq">学而优则仕</span>，主语很自然地就是士。向学之士与在位之<a href="#qingdafushi">士</a>的区别，类似于双重含义的<a href="#junzi">君子</a>。古代不同职业的地位及影响力差别很大，现代的选择面就宽得多了。</p></li>
 <li><p> 引申指理想化的士。这两个意义在《论语》中互有融合，就像现代汉语的男人、英语的man，既可以不带感情色彩地指男性成员，也可以根据上下文环境指真男儿、好汉子。<span class="lyexample"><span>【例】</span><span><a href="#8.7" class="lyref">8.7</a> <span class="lyq">士不可以不弘毅。</span><a href="#14.2" class="lyref">14.2</a> <span class="lyq">士而怀居，不足以为士矣。</span>1962年Bob Dylan的民歌金曲<em>Blowin' in the Wind</em>开头是：<span class="lyqe">How many roads must a man walk down, before you call him a man?</span></span></span></p></li>
 </ul>
-<p>此外，士还是最低级别的<a href="#qingdafushi">贵族阶层</a>，也泛指有官职者。到了战国，养士之风盛行，实用的一技之长更受看重。</p>
+<p>此外，士还是最低级别的<a href="#qingdafushi">贵族阶层</a>，也泛指有官职者。到了战国，养士之风盛行，则是偏重于实用的一技之长。</p>
 </li>
 <li><p><span class="lyterm">议</span>：讨论，商量，这里偏重于交流求道的心得体会。<span class="lyseealso"><span>【参】</span><span><a href="#15.40" class="lyref">15.40</a> <span class="lyq">道不同，不相为谋。</span>1929年，史学家陈寅恪（1890—1969）在王国维纪念碑铭中写道：<span class="lyq">士之读书治学，盖将以脱心志于俗谛之<a href="#zhigu">桎梏</a>，真理因得以发扬。</span>（谛：道理。俗谛：即庸俗鄙陋之见。）大概所有走出校园、进入社会的人，都能切身感受“俗谛”的无所不在，可见专心求道的可贵。</span></span></p></li>
 </ul></div>
@@ -2192,8 +2192,8 @@ img.characterimg {
 <p><span class="lyterm">文</span>：文采，引申指人经过后天教养学习后，流露于外的仪态风度。</p>
 </li>
 <li>
-<p><span class="lyterm">野</span>：质朴率性，也含有不懂规矩的意味。</p>
-<p><a id="shi3b"></a><span class="lyterm">史</span>：文辞繁复，引申为浮夸虚饰。<span class="lyseealso"><span>【参】</span><span>《仪礼·聘礼》：<span class="lyq">辞无常，<a href="#xun4">孙</a>而说。辞多则史，少则不达。辞苟足以达，义之至也。</span></span></span></p>
+<p><span class="lyterm">野</span>：质朴率性，也含有粗鄙不懂规矩的意味。<span class="lyseealso"><span>【参】</span><span><a href="#13.3" class="lyref">13.3</a> <span class="lyq">野哉，由也！</span></span></span></p>
+<p><a id="shi3b"></a><span class="lyterm">史</span>：文辞繁复，引申为浮夸虚饰，近似于现代口语的穷讲究、拿劲、矫情。<span class="lyseealso"><span>【参】</span><span>《仪礼·聘礼》：<span class="lyq">辞无常，<a href="#xun4">孙</a>而说。辞多则史，少则不达。辞苟足以达，义之至也。</span></span></span></p>
 </li>
 <li><p><span class="lyterm">彬</span>：荟萃，美盛，这里指文质合宜，相得益彰。成语“文质彬彬”形容人文雅有教养的样子。<span class="lyseealso"><span>【参】</span><span>《圣经·旧约·箴言》25:11：<span class="lyqe">A word fitly spoken is like apples of gold in pictures of silver.</span>（<span class="lyq">一句话说得合宜，就如金苹果在银网子里。</span>）</span></span></p></li>
 </ul></div>
@@ -2817,7 +2817,10 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#8.11">8.11</a></div>
 <div class="lybloboriginaltext"><p>子曰：“如有<a href="#zhougong">周公</a>之才之美，使骄且吝，其余不足观也已。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">美</span>：佳，指的是周公才能的出类拔萃。如果把“之才之美”理解成并列结构：的才能与美德，后面的“使骄且吝”就说不通了。如果理解成美貌，如 <a href="#6.16" class="lyref">6.16</a> <span class="lyq">宋朝之美</span>，则又缺乏史实依据。<span class="lyseealso"><span>【参】</span><span>《史记·鲁周公世家》载，<a href="#wu">武王</a>患病时，周公祭告先祖，情愿以身相代，理由就包括<span class="lyq">旦巧能，多材多艺，能事鬼神。乃王发不如旦多材多艺，不能事鬼神。</span>还说如果不答应，就把献祭的<a href="#bi4d">璧</a>和<a href="#gui1">圭</a>撤走了。</span></span></p></li>
+<li>
+<p><span class="lyterm">美</span>：佳，指的是周公才能的出类拔萃。如果把“之才之美”理解成并列结构：的才能与美德，后面的“使骄且吝”就说不通了；如果理解成美貌，如 <a href="#6.16" class="lyref">6.16</a> <span class="lyq">宋朝之美</span>，则又缺乏史实依据。<span class="lyseealso"><span>【参】</span><span>《史记·鲁周公世家》载，<a href="#wu">武王</a>患病时，周公祭告先祖，情愿以身相代，理由就包括<span class="lyq">旦巧能，多材多艺，能事鬼神。乃王发不如旦多材多艺，不能事鬼神。</span>还说如果不答应，就要把献祭的<a href="#bi4d">璧</a>和<a href="#gui1">圭</a>撤走了。</span></span></p>
+<p>这是《论语》中第一次提到“才”，后来<a href="#de2a">德</a>与才常常并举，<a href="#xian2">贤</a>则相对笼统。<span class="lyseealso"><span>【参】</span><span>《朱子语类》：<span class="lyq">德者，得之于己；才者，能有所为。</span></span></span></p>
+</li>
 <li><p><span class="lyterm">使</span>：连词，假如，假使。<span class="lyexample"><span>【例】</span><span>《吴越春秋·夫差内传》：<span class="lyq">使死者有知，吾羞前君地下，不忍睹忠臣伍子胥及公孙圣；使其无知，吾负于生。</span></span></span><span class="lyseealso"><span>【参】</span><span><a href="#18.10" class="lyref">18.10</a> <a href="#zhuofatubu">所引</a>《史记》，是周公捉发吐哺谦恭下士的例子。《韩诗外传》第2卷第17章：<span class="lyq">君子有<a href="#zhu3">主</a>善之心，而无胜人之色；德足以君天下，而无骄肆之容；行足以及后世，而不以一言非人之不善。</span>《北史·贾思伯传》载，贾思伯官至都官尚书（相当于后来的刑部尚书），又是北魏孝明帝的《春秋》师傅，可他<span class="lyq">性谦和，倾身礼士，虽在街途，停车下马，接<a href="#you4">诱</a><a href="#xunxun">恂恂</a>，<a href="#zeng1">曾</a>无倦色。客有谓曰：“公今贵重，宁能不骄？”思伯曰：“衰至便骄，何常之有！”当世以为雅言。</span>（宁（<span class="lypinyin">nìng</span>）：何，怎。<a href="#yayan">雅言</a>：正理，确论。）</span></span></p></li>
 </ul></div>
 </div>
@@ -5022,13 +5025,13 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#15.17">15.17</a></div>
 <div class="lybloboriginaltext"><p>子曰：“群居终日，言不及义，好行小慧，难矣哉！”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">言不及义，好行小慧</span>：不说正经事，爱耍小聪明。<span class="lyseealso"><span>【参】</span><span>《孟子·离娄下》：<span class="lyq">言无实不祥。不祥之实，蔽贤者当之。</span>（实：第一个指内容，第二个指后果。蔽贤者：埋没人才的人。当：承受。）</span></span></p></li>
+<li><p><span class="lyterm">言不及义，好行小慧</span>：不说正经事，爱耍小聪明。后来它们都演变为成语，前者常指人说话拉拉杂杂分不清重点或者故意回避重点，后者的例子如讨论正事时避重就轻的无聊俏皮话。另外“好行小<a href="#hui4">惠</a>”是不同的成语。<span class="lyseealso"><span>【参】</span><span>《孟子·离娄下》：<span class="lyq">言无实不祥。不祥之实，蔽贤者当之。</span>（实：第一个指内容，第二个指后果。蔽贤者：埋没人才的人。当：承受。）</span></span></p></li>
 <li><p><span class="lyterm">难矣哉</span>：相当于说（这种人算是）没治了，有种摇头叹息的感觉。<span class="lyterm">难</span>：难教化成人，无可救药的意思。可比较后文的“<a href="#zhong1a">终</a>”。</p></li>
 </ul></div>
 <div class="lyblobremark">
 <p>孔子批评的现象放到现代，应该就是那些无聊的会议了：一群人一坐一天，相互扯皮，最后来两句无关痛痒的笑话一哄而散，集中浪费生命。美国准将亨利·马丁·罗伯特（Henry Martyn Robert）1876年首次出版的《罗伯特议事规则》（<em><a href="http://www.robertsrules.com" class="lyurl" target="_blank">Robert's Rules of Order</a></em>），描述了集会议事的规范化程序，成为“高效、有序、公平的会议的有力保障”。</p>
 <p>1917年，孙中山先生发表《民权初步》，将《罗伯特议事规则》的精要引介入中国，用意在于改变<span class="lyq">一盘散沙之民众</span>、乌合之集会的状况，提高国人的民主意识与合作自治能力：<span class="lyq">集会者，实为民权发达之第一步。……夫议事之学，西人童而习之，至中学程度，则已成为第二之天性矣。所以西人合群团体之力，常超吾人之上也。……苟人人熟习此书，则人心自结，民力自固。</span></p>
-<p>随着年龄的增长，智慧真能自然而然地增加吗？与其一边讨厌开会，一边对“你会开会吗？”的问题嗤之以鼻，不如开始一板一眼地学习和反思那些很基本的东西。</p>
+<p>随着年龄的增长，智慧真能自动增加吗？与其一边讨厌开会，一边对“你会开会吗？”的问题嗤之以鼻，不如开始一板一眼地学习和反思那些很基本的东西。</p>
 </div>
 </div>
 <a id="15.18"></a><div class="lyblob">
@@ -5244,9 +5247,9 @@ img.characterimg {
 <p>他这句话的意思是：拿得出什么本事就去任什么职，做不来就歇着吧。<a id="chen2a"></a><span class="lyterm">陈</span>：摆出，陈列。<span class="lyseealso"><span>【参】</span><span>《史记·范雎蔡泽列传》引范雎上秦昭王书，开头说：<span class="lyq">臣闻明主立政，有功者不得不赏，有能者不得不官。劳大者其禄厚，功多者其爵尊，能治众者其官大。故无能者不敢当职焉，有能者亦不得蔽隐。</span></span></span></p>
 </li>
 <li><p><span class="lyterm">危而不持，<a href="#dian1">颠</a>而不扶</span>。<span class="lyterm">持</span>：扶助，扶持。本句与后面的<span class="lyterm"><a href="#xiang4b">相</a></span>一语双关，责备他们身为臣下而不作为，使主上迷途难返，陷于无相之<a href="#gu3b">瞽</a>的危险境地。<span class="lyseealso"><span>【参】</span><span><a href="#11.24" class="lyref">11.24</a> 。《明史·海瑞传》海瑞上嘉靖疏：<span class="lyq">今大臣持禄而好谀，小臣畏罪而结舌，臣不胜愤恨。</span></span></span></p></li>
-<li><p><span class="lyterm">虎兕（<span class="lypinyin">sì</span>）出于柙（<span class="lypinyin">xiá</span>），龟玉毁于椟中</span>。<span class="lyterm">兕</span>：野牛。<span class="lyterm">柙</span>：兽笼。<span class="lyterm">龟玉</span>：龟甲和宝玉，古代视为国之重器。这里用“虎兕”隐指季氏的无名之师，“龟玉”指社稷之臣颛臾，批评两位学生未能尽到持危扶颠、进尽忠言的臣辅之职。<span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">言在柙而逸，在椟而毁，典守者不得辞其过。明二子居其位而不去，则季氏之恶，己不得不任其责也。</span>（<a id="dian3"></a>典：掌管，主持。）<a id="ligu"></a>《后汉书·李固传》载，146年，年幼的汉冲帝被皇太后之兄、大将军梁冀毒死，太尉李固联合司徒胡广、司空赵戒，议立年长有德的清河王为帝。梁冀忌惮清河王之严明，执意立15岁的蠡吾侯（即汉桓帝），争论时<span class="lyq">意气凶凶而言辞激切，自胡广、赵戒以下，莫不慑惮之</span>，而李固坚守本议。一年后，李固被梁冀诬陷而死，临刑前写信给胡广、赵戒说：<span class="lyq">“固受国厚恩，是以竭其股肱，不顾死亡，志欲扶持王室，比隆<a href="#hanwendi">文</a>、<a href="#hanxuandi">宣</a>。何图一朝梁氏迷谬，公等曲从，以吉为凶，成事为败乎？汉家衰微，从此始矣！公等受主厚禄，颠而不扶，倾覆大事，后之良史，岂有所私？固身已矣，于义得矣，夫复何言！”广、戒得书悲惭，皆长叹流涕。</span>（<a id="gugong"></a>股<a href="#gong1b">肱</a>：大腿和胳膊，这里指辅佐（之力），也常比喻辅政重臣。）</span></span></p></li>
+<li><p><span class="lyterm">虎兕（<span class="lypinyin">sì</span>）出于柙（<span class="lypinyin">xiá</span>），龟玉毁于椟中</span>。<span class="lyterm">兕</span>：野牛。<span class="lyterm">柙</span>：兽笼。<span class="lyterm">龟玉</span>：龟甲和宝玉，古代视为国之重器。这里用“虎兕”隐指季氏的无名之师，“龟玉”指社稷之臣颛臾，批评两位学生未能尽到持危扶颠、进尽忠言的臣辅之职。<span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">言在柙而逸，在椟而毁，典守者不得<a href="#ci2a">辞</a>其过。明二子居其位而不去，则季氏之恶，己不得不任其责也。</span>（<a id="dian3"></a>典：掌管，主持。）<a id="ligu"></a>《后汉书·李固传》载，146年，年幼的汉冲帝被皇太后之兄、大将军梁冀毒死，太尉李固联合司徒胡广、司空赵戒，议立年长有德的清河王为帝。梁冀忌惮清河王之严明，执意立15岁的蠡吾侯（即汉桓帝），争论时<span class="lyq">意气凶凶而言辞激切，自胡广、赵戒以下，莫不慑惮之</span>，而李固坚守本议。一年后，李固被梁冀诬陷而死，临刑前写信给胡广、赵戒说：<span class="lyq">“固受国厚恩，是以竭其股肱，不顾死亡，志欲扶持王室，比隆<a href="#hanwendi">文</a>、<a href="#hanxuandi">宣</a>。何图一朝梁氏迷谬，公等曲从，以吉为凶，成事为败乎？汉家衰微，从此始矣！公等受主厚禄，颠而不扶，倾覆大事，后之良史，岂有所私？固身已矣，于义得矣，夫复何言！”广、戒得书悲惭，皆长叹流涕。</span>（<a id="gugong"></a>股<a href="#gong1b">肱</a>：大腿和胳膊，这里指辅佐（之力），也常比喻辅政重臣。）</span></span></p></li>
 <li><p><a id="gu4a"></a><span class="lyterm">固</span>：本义为四周地势险要闭塞，易于长守不变。<span class="lyexample"><span>【例】</span><span>贾谊《过秦论下》：<span class="lyq">秦地被山带河以为固，四塞之国也。</span></span></span></p></li>
-<li><p><span class="lyterm">必为之辞</span>：非要替它找个借口。</p></li>
+<li><p><span class="lyterm">必为之辞</span>：非要替它找借口。<a id="ci2a"></a><span class="lyterm">辞</span>：动词，辩解，申辩，后来又从言语上的抗拒推广到行为上的不接受、开脱。<span class="lyexample"><span>【例】</span><span>《礼记·表记》：<span class="lyq">仁者之过易辞也。</span></span></span></p></li>
 <li><p><span class="lyterm">不患寡而患不均，不患贫而患不安</span>：根据文意，似应为：不患贫而患不均，不患寡而患不安。<span class="lyseealso"><span>【参】</span><span>西汉董仲舒《春秋繁露·度制》开篇：<span class="lyq">孔子曰：“不患贫而患不均。”故有所积重，则有所空虚矣。大富则骄，大贫则忧；忧则为盗，骄则为暴——此众人之情也。</span></span></span></p></li>
 <li>
 <p><span class="lyterm">既<a href="#lai2">来</a>之，则安之</span>里的<span class="lyterm">来</span>和<span class="lyterm">安</span>，都是使动用法：使归从，使安定。</p>
@@ -5638,8 +5641,8 @@ img.characterimg {
 <p>宰我出，子曰：“<a href="#zaiyu">予</a>之不仁也！子生三年，然后免于父母之怀。夫三年之丧，天下之通丧也，予也有三年之爱于其父母乎？”</p>
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><span class="lyterm">崩</span>：本义为山体迸裂倒塌，引申为败坏。这句话后来衍生出成语“礼崩乐坏”。</p></li>
-<li><p><span class="lyterm">燧</span>（<span class="lypinyin">suì</span>）：燧木，古代的取火用具。<span class="lyterm">钻燧改火</span>：古人钻木取火，四季所用的木料都不相同，<span class="lyterm">改火</span>指木料轮换过一遍，即一年之期。<span class="lyterm">旧谷既没，新谷既升</span>也是这个意思。这是宰予的大胆建议，孔子的回答，让他以问心无愧为准。</p></li>
+<li><p><span class="lyterm">崩</span>：本义为山体迸裂倒塌，引申为败坏。这句话后来衍生出成语“礼坏乐崩”（又作“礼崩乐坏”）。</p></li>
+<li><p><span class="lyterm">燧</span>（<span class="lypinyin">suì</span>）：燧木，古代的取火用具。<span class="lyterm">钻燧改火</span>：古人钻木取火，四季所用的木料都不相同，<span class="lyterm">改火</span>指木料轮换过一遍，即一年之期。<span class="lyterm">旧谷既没，新谷既升</span>也是这个意思。这是宰予的大胆建议，孔子的回答，让他以问心无愧为准。本章也体现了师徒二人的语言艺术。</p></li>
 <li><p><a id="zhi3"></a><span class="lyterm">旨</span>：美味。<span class="lyexample"><span>【例】</span><span>成语“甘旨肥浓”。</span></span></p></li>
 <li><p><span class="lyterm">天下之通丧</span>。从其它资料看，这个说法也许有所夸大。在当时，三年之丧可能已成为<a href="#gaozongliangyin">商高宗武丁</a>那个时代的久远往事，孔子却要像<a href="#lugongbiansu">鲁公变俗</a>那样恢复这个传统。<span class="lyseealso"><span>【参】</span><span>《孟子·滕文公上》载，前327年滕定公去世，太子派人向孟子请教丧礼事宜，孟子回答：<span class="lyq">诸侯之礼，……，吾尝闻之矣。三年之丧，……，自天子达于庶人，<a href="#sandai">三代</a>共之</span>，和孔子的说法相同。滕国将定三年之丧时，结果却是<span class="lyq">父兄百官皆不欲，曰：“吾宗国鲁先君莫之行，吾先君亦莫之行也，至于子之身而反之，不可。”</span></span></span></p></li>
 <li>
@@ -5933,7 +5936,7 @@ img.characterimg {
 <a id="19.8"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#19.8">19.8</a></div>
 <div class="lybloboriginaltext"><p><a href="#zixia">子夏</a>曰：“小人之过也必文。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><a id="wen3"></a><span class="lyterm">文</span>：修饰，这里用作贬义，虚饰，粉饰。<span class="lyexample"><span>【例】</span><span>成语“文过饰非”。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#19.21" class="lyref">19.21</a> </span></span></p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><a id="wen3"></a><span class="lyterm">文</span>：修饰，这里用作贬义，虚饰，粉饰。<span class="lyexample"><span>【例】</span><span>成语“文过饰非”。</span></span><span class="lyseealso"><span>【参】</span><span><a href="#19.21" class="lyref">19.21</a>  君子之过。</span></span></p></li></ul></div>
 </div>
 <a id="19.9"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#19.9">19.9</a></div>
@@ -5977,7 +5980,7 @@ img.characterimg {
 <a id="19.13"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#19.13">19.13</a></div>
 <div class="lybloboriginaltext"><p><a href="#zixia">子夏</a>曰：“仕而优则学，学而优则仕。”</p></div>
-<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm"><a href="#you1">优</a></span>：行有余力。这个说法与儒家修齐治平的理念是一致的。唐宋科举制确立后，读书就成为做官从政的标准途径。</p></li></ul></div>
+<div class="lyblobannotation"><ul class="lyblobitemize"><li><p><span class="lyterm"><a href="#you1">优</a></span>：行有余力。这个说法与儒家修齐治平的理念是一致的。唐宋科举制确立后，读书就成为做官从政的标准途径。<span class="lyseealso"><span>【参】</span><span><a href="#18.7" class="lyref">18.7</a> <span class="lyq">君子之仕也，行其义也。</span></span></span></p></li></ul></div>
 </div>
 <a id="19.14"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#19.14">19.14</a></div>
