--- a/aboly.html
+++ b/aboly.html
@@ -1578,9 +1578,9 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“君子怀德，小人怀土；君子怀刑，小人怀惠。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">君子</span>、<span class="lyterm">小人</span>分别指居上位者和平民百姓，也就是治人者和治于人者。本章反映了孔子的政治模型。<span class="lyseealso"><span>【参】</span><span><a href="#12.19" class="lyref">12.19</a>  君子之德与小人之德。《孟子·滕文公上》：<span class="lyq">无君子莫治<a href="#yeren">野人</a>，无野人莫养君子。</span></span></span></p></li>
-<li><p><span class="lyterm">怀</span>：心中存想，关心，在意，care about。<span class="lyterm">怀土</span>：安心满足于眼前的存身之地，后来引申为思念故乡。<span class="lyexample"><span>【例】</span><span>《汉书·叙传》：<span class="lyq">寤戍卒之言，断怀土之情。</span>（<a href="#wumei">寤</a>：引申为醒悟。）</span></span></p></li>
+<li><p><span class="lyterm">怀</span>：心中存想，关心，在意，care about。<span class="lyterm">怀土</span>：安心满足于眼前的存身之地，后来引申为思念故乡。<span class="lyexample"><span>【例】</span><span>《汉书·叙传》：<span class="lyq">寤戍卒之言，断怀土之情。</span>（<a href="#wumei">寤</a>：醒悟。）</span></span></p></li>
 <li><p><span class="lyterm">刑</span>：法度，规范。<span class="lyexample"><span>【例】</span><span>《左传·襄公二十七年》：<span class="lyq">君失其信，而国无刑，不亦难乎！</span></span></span></p></li>
-<li><p><a id="hui4"></a><span class="lyterm">惠</span>：恩惠，利益。<span class="lyexample"><span>【例】</span><span><a href="#17.6" class="lyref">17.6</a> <span class="lyq">惠则足以使人。</span></span></span><span class="lyseealso"><span>【参】</span><span>《谷梁传·隐公元年》：<span class="lyq">《<a href="#chunqiu">春秋</a>》贵义不而不贵惠，信道而不信邪。</span></span></span></p></li>
+<li><p><a id="hui4"></a><span class="lyterm">惠</span>：恩惠，利益。<span class="lyexample"><span>【例】</span><span><a href="#17.6" class="lyref">17.6</a> <span class="lyq">惠则足以使人。</span></span></span><span class="lyseealso"><span>【参】</span><span>《谷梁传·隐公元年》：<span class="lyq">《<a href="#chunqiu">春秋</a>》贵义而不贵惠，信道而不信邪。</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="4.12"></a><div class="lyblob">
@@ -1588,7 +1588,7 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>子曰：“放于利而行，多怨。”</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li><p><span class="lyterm">放</span>（<span class="lypinyin">fǎng</span>）：依据，依照。<span class="lyterm">放于利而行</span>指怎么获利多就怎么干，唯利是图。</p></li>
-<li><p><a id="yuan4a"></a><span class="lyterm">怨</span>：仇恨，怨恨，这是其本义。<span class="lyexample"><span>【例】</span><span><a href="#14.34" class="lyref">14.34</a> <span class="lyq">以德报怨，何如？</span></span></span></p></li>
+<li><p><a id="yuan4a"></a><span class="lyterm">怨</span>：仇恨，愤恨。这是其本义，甲骨文字形会意为心中憋屈不平。<span class="lyexample"><span>【例】</span><span><a href="#14.34" class="lyref">14.34</a> <span class="lyq">以德报怨，何如？</span></span></span></p></li>
 </ul></div>
 </div>
 <a id="4.13"></a><div class="lyblob">
@@ -1937,7 +1937,7 @@ img.characterimg {
 </li>
 <li>
 <p><span class="lyterm">怨</span>：指别人对伯夷、叔齐的<a href="#yuan4a">怨恨</a>。<span class="lyseealso"><span>【参】</span><span><a href="#15.15" class="lyref">15.15</a> <span class="lyq">躬自厚而薄责于人，则远怨矣。</span></span></span></p>
-<p>古注也有根据 <a href="#7.15" class="lyref">7.15</a> ，解释为他们二人内心的<a href="#yuan4b">怨悔</a>，感觉较牵强。</p>
+<p>古注也有根据 <a href="#7.15" class="lyref">7.15</a> ，解释为他们二人内心的<a href="#yuan4b">怨悔</a>，似乎较牵强。</p>
 </li>
 <li>
 <p><a id="shiyong"></a><span class="lyterm">是用</span>：“用是”的倒装，由于这，因此，和现代书面语“是以”的结构和含义都相同，多见于先秦作品。<span class="lyexample"><span>【例】</span><span>《史记·越王勾践世家》：<span class="lyq">王前欲伐齐，员强谏，已而有功，用是反怨王。</span>（员：伍子胥的名。）</span></span></p>
